webpack5 +ts + postcss

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,8 @@
   <meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
   <meta http-equiv="expires" content="0">
 
-  <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json"> -->
-  <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"> -->
-  <!-- <link rel="stylesheet" href="./iconfont/iconfont.css"> -->
-  <link rel="stylesheet" href="//at.alicdn.com/t/font_815568_ojbwny7vd4a.css">
-  <title>优挂企业版</title>
+
+  <title></title>
 </head>
 
 <body>
@@ -22,20 +19,7 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
-  <!-- <script type="text/javascript"
-    src="https://webapi.amap.com/maps?v=1.4.15&key=7364777954f5abd5ae44cfcb5183039c&plugin=AMap.Geocoder"></script> -->
-    <script type="text/javascript"
-    src="https://webapi.amap.com/maps?v=1.4.15&key=f4f829720221618ce0352fca5de43ea4&plugin=AMap.Geocoder"></script>
-    <script src="//webapi.amap.com/ui/1.1/main.js?v=1.1.1"></script>
-  <script>
-    var geocoder;
-    var service;
-    if (!geocoder) {
-      geocoder = new AMap.Geocoder();
-    }
-    // 将geocoder对象放入window对象中
-    window.geocoder = geocoder;
-  </script>
+
 </body>
 
 </html>
